name:                servant-frontpage
version:             0.1.0.0
synopsis:            Serving html page from file with caching and detecting changes in the file.
license:             BSD3
license-file:        LICENSE
author:              Al Zohali
maintainer:          zohl@fmap.me
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     
    Servant.Utils.FrontPage

  build-depends: base >=4.9 && <4.10
               , bytestring
               , directory
               , exceptions
               , http-media
               , time
               , servant
               , servant-server
               
  hs-source-dirs:      src
  default-language:    Haskell2010
